--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
 <body>
     
     <div class="header">
-        <p>Header Logo</p>
+        <div class="header-nav">
+            <p>Header Logo</p>
 
-        <ul>
-            <li><a>header link one</a></li>
-            <li><a>header link two</a></li>
-            <li><a>header link three</a></li>
-        </ul>
+            <ul class="header-links">
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
+            </ul>
+        </div>
+
+        <div class="header-content">
+            <p>placeholder</p>
+        </div>
 
     </div>
 
