finish the HTML portion of the header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
         </div>
 
         <div class="header-content">
-            <p>placeholder</p>
+            <div class="header-container">
+                <h1>This website is awesome</h1>
+                <p>this website has some subtext that goes here, it is smaller font and has lower contrast</p>
+                <button>sign up</button>
+            </div>
+
+            <p>this is a placeholder for an image</p>
+
         </div>
 
     </div>
