Completely style the header as demonstrated by the example image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="header">
         <div class="header-nav">
-            <p>Header Logo</p>
+            <p id="header-logo">Header Logo</p>
 
             <ul class="header-links">
                 <li><a href="">header link one</a></li>
@@ -23,11 +23,11 @@
         <div class="header-content">
             <div class="header-container">
                 <h1>This website is awesome</h1>
-                <p>this website has some subtext that goes here, it is smaller font and has lower contrast</p>
+                <p id="secondary-text" style="margin-bottom: 8px;">this website has some subtext that goes here under the main title, it is smaller font and has lower color contrast</p>
                 <button>sign up</button>
             </div>
 
-            <p>this is a placeholder for an image</p>
+            <p id="image">this is a placeholder for an image</p>
 
         </div>
 
