Add HTML for the information section of the page

--- a/index.html
+++ b/index.html
@@ -33,6 +33,33 @@
 
     </div>
 
+    <div class="information">
+        <h2 id="information-header">Some Random Information</h2>
+
+        <div id="information-cards">
+            <div class="card">
+                <div></div>
+                <p>this is some subtext under and illustration or an image</p>
+            </div>
+
+            <div class="card">
+                <div></div>
+                <p>this is some subtext under and illustration or an image</p>
+            </div>
+
+            <div class="card">
+                <div></div>
+                <p>this is some subtext under and illustration or an image</p>
+            </div>
+
+            <div class="card">
+                <div></div>
+                <p>this is some subtext under and illustration or an image</p>
+            </div>
+        </div>
+
+    </div>
+
     <div class="footer">Made by Dante as apart of TOP curriculum</div>
 
 </body>
