Make small changes to the HTML and Style the information section of the website

--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
 
         <div id="information-cards">
             <div class="card">
-                <div></div>
-                <p>this is some subtext under and illustration or an image</p>
+                <div class="image-placeholder"></div>
+                <p style="padding-top: 8px">this is some subtext under and illustration or an image</p>
             </div>
 
             <div class="card">
-                <div></div>
-                <p>this is some subtext under and illustration or an image</p>
+                <div class="image-placeholder"></div>
+                <p style="padding-top: 8px">this is some subtext under and illustration or an image</p>
             </div>
 
             <div class="card">
-                <div></div>
-                <p>this is some subtext under and illustration or an image</p>
+                <div class="image-placeholder"></div>
+                <p style="padding-top: 8px">this is some subtext under and illustration or an image</p>
             </div>
 
             <div class="card">
-                <div></div>
-                <p>this is some subtext under and illustration or an image</p>
+                <div class="image-placeholder"></div>
+                <p style="padding-top: 8px">this is some subtext under and illustration or an image</p>
             </div>
         </div>
 
