add HTML for the quote section of the website

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     </div>
 
-    <div class="information">
+    <div id="information">
         <h2 id="information-header">Some Random Information</h2>
 
         <div id="information-cards">
@@ -56,6 +56,11 @@
                 <div class="image-placeholder"></div>
                 <p style="padding-top: 8px">this is some subtext under and illustration or an image</p>
             </div>
+        </div>
+
+        <div id="quote">
+            <p>This is and inspiring quote, or a testimonial from a customer. Maybe it's just filling up sapce, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p>-Thor, God of Thunder</p>
         </div>
 
     </div>
