Style the quote section of the website

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         </div>
 
         <div id="quote">
-            <p>This is and inspiring quote, or a testimonial from a customer. Maybe it's just filling up sapce, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <p>-Thor, God of Thunder</p>
+            <p id="quote-text">This is and inspiring quote, or a testimonial from a customer. Maybe it's just filling up sapce, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p style="text-align: end; font-weight: 900;">-Thor, God of Thunder</p>
         </div>
 
     </div>
