add call to action HTML

--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@
             <p id="quote-text">This is and inspiring quote, or a testimonial from a customer. Maybe it's just filling up sapce, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <p style="text-align: end; font-weight: 900;">-Thor, God of Thunder</p>
         </div>
+    </div>
 
+    <div id="call to action">
+        <div>
+            <p></p>
+            <p></p>
+        </div>
+
+        <button></button>
     </div>
 
     <div class="footer">Made by Dante as apart of TOP curriculum</div>
