style call to action section of the page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="header-container">
                 <h1>This website is awesome</h1>
                 <p id="secondary-text" style="margin-bottom: 8px;">this website has some subtext that goes here under the main title, it is smaller font and has lower color contrast</p>
-                <button>sign up</button>
+                <button type="button">sign up</button>
             </div>
 
             <p id="image">this is a placeholder for an image</p>
@@ -64,13 +64,13 @@
         </div>
     </div>
 
-    <div id="call to action">
+    <div id="call-to-action" >
         <div>
-            <p></p>
-            <p></p>
+            <p style="font-weight:900; font-size: 24px; margin-bottom: 24px;">Call to action! It's time!</p>
+            <p>sign up for our product by checking that button right over there!</p>
         </div>
 
-        <button></button>
+        <button class="button">sign up</button>
     </div>
 
     <div class="footer">Made by Dante as apart of TOP curriculum</div>
